Add value for radio input gender female.

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                   </div>
                   <div class="radio">
                     <label for="exampleInputGenderF">
-                      <input type="radio" id="exampleInputGenderF" name="gender">
+                      <input type="radio" id="exampleInputGenderF" name="gender" value="F">
                       Feminino</label>
                   </div>
                 </div>
@@ -513,6 +513,7 @@
 
 </div>
 
+<script src="models/User.js"></script>
 <script src="index.js"></script>
 
 </body>
