--- a/index.html
+++ b/index.html
@@ -513,6 +513,7 @@
 
 </div>
 
+<script src="classes/Utils.js"></script>
 <script src="models/User.js"></script>
 <script src="controllers/UserController.js"></script>
 <script src="index.js"></script>
